@@ -109,7 +109,7 @@ Publisher::Publisher( int argc, char** argv, char** envp)
   }
   ::Xyz::FooNoKeyTypeSupportImpl* publisher_data = new ::Xyz::FooNoKeyTypeSupportImpl();
   if(::DDS::RETCODE_OK != publisher_data->register_type(
-                            this->participant_,
+                            this->participant_.in(),
                             this->config_.typeName().c_str()
                           )
     ) {
@@ -236,7 +236,7 @@ Publisher::~Publisher()
   }
 
   // Release the participant
-  if( 0 == CORBA::is_nil( this->participant_)) {
+  if( 0 == CORBA::is_nil( this->participant_.in())) {
     if( ::DDS::RETCODE_PRECONDITION_NOT_MET
          == this->participant_->delete_contained_entities()
       ) {
@@ -245,7 +245,7 @@ Publisher::~Publisher()
       ));
 
     } else if( ::DDS::RETCODE_PRECONDITION_NOT_MET
-               == TheParticipantFactory->delete_participant( this->participant_)
+               == TheParticipantFactory->delete_participant( this->participant_.in())
              ) {
       ACE_ERROR ((LM_ERROR,
         ACE_TEXT("(%P|%t) ERROR: Unable to release the participant.\n")
